fix: [skip ci] database enum vars labels
