# spec.openapi.yaml
@@ -1829,6 +1829,33 @@ paths:
                   paginationMeta:
                     $ref: "#/components/schemas/PaginationMeta"
 
+    post:
+      tags:
+        - Conversations
+      description: send a message in a conversation
+      operationId: sendMessageInConversation
+      parameters:
+        - in: path
+          name: id
+          required: true
+          description: The id value of the conversation you want to send a message to.
+          schema:
+            type: string
+      requestBody:
+        description: new message info
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/NewMessageSchema"
+
+      responses:
+        "200":
+          description: message object
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/SendMessageInConversationResponseSchema"
+
   /messages:
     get:
       tags:
@@ -2064,7 +2091,7 @@ components:
         - Closed
         - Deleted
 
-    UserPermissionLevel:
+    UserPermissionLevelEnum:
       type: string
       enum:
         - Owner
@@ -2274,7 +2301,7 @@ components:
         profilePicture:
           type: string
         currentOrganizationAccessLevel:
-          $ref: "#/components/schemas/UserPermissionLevel"
+          $ref: "#/components/schemas/UserPermissionLevelEnum"
         organization:
           $ref: "#/components/schemas/OrganizationSchema"
         featureFlags:
@@ -2334,7 +2361,7 @@ components:
           type: string
           format: date-time
         accessLevel:
-          $ref: "#/components/schemas/UserPermissionLevel"
+          $ref: "#/components/schemas/UserPermissionLevelEnum"
         name:
           type: string
         email:
@@ -2454,7 +2481,7 @@ components:
         email:
           type: string
         accessLevel:
-          $ref: "#/components/schemas/UserPermissionLevel"
+          $ref: "#/components/schemas/UserPermissionLevelEnum"
         createdAt:
           type: string
           format: date-time
@@ -2473,7 +2500,7 @@ components:
         email:
           type: string
         accessLevel:
-          $ref: "#/components/schemas/UserPermissionLevel"
+          $ref: "#/components/schemas/UserPermissionLevelEnum"
       required:
         - email
         - accessLevel
@@ -3154,7 +3181,7 @@ components:
       type: object
       properties:
         accessLevel:
-          $ref: "#/components/schemas/UserPermissionLevel"
+          $ref: "#/components/schemas/UserPermissionLevelEnum"
       required:
         - email
 
@@ -3406,7 +3433,7 @@ components:
         createdAt:
           type: string
           format: date-time
-        content:
+        messageData:
           oneOf:
             - type: object
               properties: {} # Define object structure if needed
@@ -3419,6 +3446,27 @@ components:
         - status
         - message_type
         - createdAt
+
+    NewMessageSchema:
+      properties:
+        messageType:
+          $ref: "#/components/schemas/MessageTypeEnum"
+        createdAt:
+          type: string
+          format: date-time
+        content:
+          oneOf:
+            - type: object
+              properties: {} # Define object structure if needed
+            - type: string
+
+    SendMessageInConversationResponseSchema:
+      type: object
+      properties:
+        message:
+          $ref: "#/components/schemas/MessageSchema"
+      required:
+        - message
 
     NotFoundErrorResponseSchema:
       type: object
